# aoc-2024

./: aoc2024.cabal  day
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: D1.hs  D2.hs  D3.hs  Main.hs
