cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
author:             Matz Hilven
build-type:         Simple
data-dir:           data

common warnings
    ghc-options: -Wall

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Paths_aoc2024
      D1
      D2
      D3
    build-depends:    base ^>=4.17.2.1, regex-tdfa ^>= 1.3.2
    hs-source-dirs:   src
    default-language: Haskell2010
